# kanata

./: Cargo.toml  build.rs  justfile
cfg_samples/: deflayermap.kbd  fancy_symbols.kbd  kanata.kbd
cfg_samples/tray-icon/: tray-icon.kbd  tray-icon4.kbd
cfg_samples/win-msg/: insert-date-socket.ahk  win-msg-socket.kbd
cfg_samples/win-msg/Lib/: _socket.ahk  ↑ download from link in this file.txt
docs/: config.adoc  key_symbols.md  platform-known-issues.adoc
docs/simulated_passthru_ahk/: kanata_dll.kbd  kanata_passthru.ahk
helper/: Cargo.toml
helper/src/: alias.rs  helper.rs  lib.rs
key-sort-add/: Cargo.toml
keyberon/src/: action.rs  key_code.rs  layout.rs  multikey_buffer.rs
parser/: Cargo.toml
parser/src/: custom_action.rs
parser/src/cfg/: defcfg.rs  fake_key.rs  list_actions.rs  mod.rs  tests.rs  windows.rs
parser/src/keys/: mod.rs  windows.rs
parser/test_cfgs/: push-msg-s.kbd
sim_evt/: Cargo.toml
sim_evt/src/: lib_sim.rs
simulated_input/: Cargo.toml
simulated_input/src/: sim.rs
simulated_passthru/: Cargo.toml
simulated_passthru/src/: key_in.rs  key_out.rs  lib_passthru.rs  log_win.rs
src/: filesim.rs  gui_nwg_ext.rs  gui_win.rs  lib.rs  lib_main.rs  m_cli.rs  m_gui.rs  m_gui_win.rs  main.rs  tcp_server.rs  tests.rs
src/gui/: [gui].rs  mod.rs  win.rs  win2.rs
src/gui/win32/: base_helper.rs  high_dpi.rs  mod.rs  win32_helper.rs
src/gui/win_dbg_logger/: mod.rs
src/gui/win_nwg_ext/: mod.rs
src/kanata/: mod.rs
src/main_lib/: win_gui.rs
src/oskbd/: macos.rs  mod.rs  sim_passthru.rs  simulated.rs
tcp_protocol/src/: lib.rs
(+10 files in other folders)
