[package]
name       	= "helper"
description	= "Helper functions that can be shared between the main crate as well as the build script"
version    	= "0.1.0"
edition    	= "2021"
license    	= "MIT"

[lints.rust]
non_snake_case        	= "allow"
non_upper_case_globals	= "allow"
non_camel_case_types  	= "allow"
